@@ -812,6 +812,19 @@ header {
     background: url(../assets/img/uk-flag.svg);
 }
 
+.newtab-icon {
+    background: url(../assets/img/newtab-icon.svg)
+}
+
+.redirect {
+    align-self: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 15px;
+    width: 15px;
+}
+
 .flag {
     background-position: center;
     background-repeat: no-repeat;
@@ -1064,6 +1077,8 @@ footer {
 
 /* title+subtitle*/
 .project-title {
+    display: flex;
+    gap: 5px;
     margin: 5px 0;
 }
 
@@ -1268,6 +1283,10 @@ footer {
 
 .project-box:hover {
     transform: scale(1.05);
+}
+
+.project-box:hover .project-title h4 {
+    color: var(--cv-color);
 }
 
 .cloud-text {
