@@ -35,3 +35,4 @@
 24/06/23 -> HTML/CSS/PHP => added new project (l'univers du téléphone)
 24/06/23 -> HTML => fixed a link that was not 'https'
 25/06/23 -> CSS => minor style changes (transition, colors..)
+01/07/23 -> CSS/HTML => added "external link" icon in projects cards.
